--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,25 @@
 html {
 	scroll-behavior: smooth;
 }
+
+/* AnimatedBackground.css */
+.animated-gradient {
+	position: fixed;
+	inset: 0;
+	z-index: -1;
+	background: linear-gradient(-45deg, #171717, #1d1d1d, #232323, #101010);
+	background-size: 400% 400%;
+	animation: gradientBG 15s ease infinite;
+}
+
+@keyframes gradientBG {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
